--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tag %>
 </head>
 <body>
-  <%= render :partial=>'menu' %>
+  <%= render :partial=>'/layouts/menu' %>
 <%= yield %>
 
 </body>
