--- a/app/views/table_prices/index.html.haml
+++ b/app/views/table_prices/index.html.haml
@@ -5,7 +5,7 @@ Tabela de preços
     %th Ativa
     %th &nbsp;
     %th &nbsp;
-  - @table_price.each do |tp|
+  - @table_prices.each do |tp|
     %tr
       %td= tp.name
       %td= tp.active
