refatoração renomeando testes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,10 @@
 <body>
   <%= render :partial=>'/layouts/menu' %>
   <% if flash[:notice] %>
-    <p class="notice"><%= flash[:notice]></p>
+    <p class="notice"><%= flash[:notice] %></p>
   <% end %>
   <% if flash[:error] %>
-    <p class="error"><%= flash[:error]></p>
+    <p class="error"><%= flash[:error] %></p>
   <% end %>
 <%= yield %>
 
