--- a/app/views/patients/search.html.haml
+++ b/app/views/patients/search.html.haml
@@ -1,1 +1,4 @@
-= Searching for Patients
+Searching for Patients
+- form_tag patients_retrieve_names_path do |f|
+  = text_field_tag :initials
+  = submit_tag 'pesquisar'
